[package]
name = "plottwist"
version = "0.3.0"
authors = ["qieyia <qieyia.dev@gmail.com>"]

[features]
binaries = ["cursive"]

[lib]
name = "plottwist"
path = "src/lib.rs"
doc = true

[[bin]]
name = "plottwist-series"
path = "src/bin/plottwist-series.rs"
required-features = ["binaries"]

[[bin]]
name = "plottwist-episodes"
path = "src/bin/plottwist-episodes.rs"
required-features = ["binaries"]

[dependencies]
cursive = { version = "0.6.4", optional = true }
reqwest = "0.7.3"
regex = "0.2.2"
lazy_static = "0.2.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
