[package]
name = "plottwist"
version = "0.5.1"
authors = ["qieyia <qieyia.dev@gmail.com>"]

[features]
ncurses = ["cursive"]
opengl = ["glutin", "gl"]

[lib]
name = "plottwist"
path = "src/lib.rs"
doc = true

[[bin]]
name = "plottwist-series"
path = "src/bin/plottwist-series.rs"
required-features = ["ncurses"]

[[bin]]
name = "plottwist-episodes"
path = "src/bin/plottwist-episodes.rs"
required-features = ["ncurses"]

[[bin]]
name = "plottwist-gl"
path = "src/bin/plottwist-gl.rs"
required-features = ["opengl"]

[dependencies]
glutin = { version = "0.9.2", optional = true }
gl = { version = "0.6.3", optional = true }
cursive = { version = "0.6.4", optional = true }
htmlescape = "0.3.1"
reqwest = "0.7.3"
regex = "0.2.2"
lazy_static = "0.2.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
